crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__permission_collapsed_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Edit                                                                                                                  │"
"│  +line 0                                                                                                             │"
"│  +line 1                                                                                                             │"
"│  +line 2                                                                                                             │"
"│  +line 3                                                                                                             │"
"│  +line 4                                                                                                             │"
"│  +line 5                                                                                                             │"
"│  +line 6                                                                                                             │"
"│  +line 7                                                                                                             │"
"│  +line 8                                                                                                             │"
"│  +line 9                                                                                                             │"
"│  +line 10                                                                                                            │"
"│  +line 11                                                                                                            │"
"│  … +8 lines (ctrl+e to expand)                                                                                       │"
"│                                                                                                                      │"
"│Do you want to edit src/lib.rs?                                                                                       │"
"│❯ 1. Yes                                                                                                              │"
"│  2. Yes, allow Edit(src/) during this session                                                                        │"
"│  3. No, and tell bingo what to do differently (esc)                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                                   fake-1"
