crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__permission_feedback_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Bash                                                                         │"
"│   /tmp/project                                                               │"
"│   $ rm -rf build                                                             │"
"│                                                                              │"
"│ Do you want to bash rm -rf build?                                            │"
"│   1. Yes                                                                     │"
"│ ❯ 2. No, and tell bingo what to do differently (esc)                         │"
"│      > use cargo clean                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
