crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__permission_word_diff_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Edit                                                                         │"
"│   --- a/src/view.rs                                                          │"
"│   +++ b/src/view.rs                                                          │"
"│   @@ -12,3 +12,3 @@                                                          │"
"│    fn border(busy: bool) -> Style {                                          │"
"│   -    match busy { true => dim() }                                          │"
"│   +    match busy { true => breathing() }                                    │"
"│    }                                                                         │"
"│                                                                              │"
"│ Do you want to edit src/lib.rs?                                              │"
"│ ❯ 1. Yes                                                                     │"
"│   2. Yes, allow Edit(src/) during this session                               │"
"│   3. No, and tell bingo what to do differently (esc)                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
